--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -330,13 +330,22 @@ parameters:
     weibo_appkey: ac24832ff6273b123b4f3dc7747cbf1e
     weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
 
-    #流量包
-    flow_url: http://59.83.33.14/   #接口url
-    flow_prv_key: 5E703068E764D3DC   #加密私钥
-    flow_custom_sn: B772AA94ABDC6BEE   #SN号码
+   #流量包
+    flow_url: http://59.83.33.13/   #接口url
+    flow_prv_key: A757C0C02B0CF959   #加密私钥
+    flow_custom_sn: 8C981708DF8AE2F0   #SN号码
+    flow_client_ip: #ip地址
+        1: 59.83.33.8
+        2: 59.83.33.60
     flow_file_path_flow_api_log: /data/91jili/logs/api/flow_api.log
     flow_mail_subject: "积粒网-flow流量包接口数据处理失败"
-    flow_alertTo_contacts: zhangmm@voyagegroup.com.cn
+    flow_alertTo_contacts: vctech-system-emergency@voyagegroup.com
     flow_exchange_error: "对不起，不能兑换，请联系客服！"
     flow_mobile_validate_api: "mobile_validateV1.php"
     flow_createorder_api: "createorder_api.php"
+    flow_validations:
+        1: { errorno: "1001", message: "缺少参数(custom_order_sn,status)"}
+        2: { errorno: "1002", message: "非法IP" }
+        3: { errorno: "1003", message: "status不正确(success,error)" }
+        4: { errorno: "1004", message: "订单不存在" }
+        5: { errorno: "1005", message: "订单已结束" }
