--- a/scripts/perl/Lib/SMTP.yaml
+++ b/scripts/perl/Lib/SMTP.yaml
@@ -1,4 +1,4 @@
 smtp:
     server:    smtp.exmail.qq.com
-    username:    xujf@voyagegroup.com.cn
-    password:    8416032abc
+    username:    username@voyagegroup.com.cn
+    password:    password
