--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -54,6 +54,7 @@ twig:
 
         bangwoya_com: %bangwoya_com%
 
+        cps_default_rebate: %cps_default_rebate% 
         cps_rebate_type: %cps_rebate_type%
         tb_self_promot_pic_path: %taobao_self_promotion_picture_uri_path% 
 # Assetic Configuration
