--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -227,23 +227,29 @@ parameters:
     exchange_ing_amazon_tilte: “亚马逊礼品卡”兑换申请
     exchange_ing_alipay_tilte: 支付宝充值兑换申请
     exchange_ing_mobile_tilte: 手机费兑换申请
+    exchange_ing_flow_tilte: 流量包兑换申请
     exchange_ing_amazon_content: 亲爱的<br/><br/>我们已经收到您的“亚马逊礼品卡”兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/2/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
     exchange_ing_alipay_content: 亲爱的<br/><br/>您好！我们已经收到了您的支付宝充值申请，我们将在十个工作日内完成支付宝充值手续。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/3/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
     exchange_ing_mobile_content: 亲爱的<br/><br/>我们已经收到您的手机费兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/4/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
+    exchange_ing_flow_content: 亲爱的<br/><br/>我们已经收到您的流量包兑换申请，兑换会在一个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://www.91jili.com/user/exchange/4/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的积粒网帐户。<br/><br/>积粒网运营中心
     exchange_finish_amazon_tilte: “亚马逊礼品卡”兑换成功
     exchange_finish_alipay_tilte: 支付宝充值兑换成功
     exchange_finish_mobile_tilte: 手机费兑换成功
-    exchange_finish_amazon_content: 亲爱的<br/><br/>您好！您的“亚马逊礼品卡”兑换申请已经处理成功，<br/>请在<a href="http://www.91jili.com/user/exchange/2/1"  target="_blank">兑换历史</a>中查看您的“亚马逊礼品卡”卡号。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/"  target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
-    exchange_finish_alipay_content: 亲爱的<br/><br/>您好！您的支付宝充值申请已经处理成功，请及时查看您的支付宝余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
-    exchange_finish_mobile_content: 亲爱的<br/><br/>您好！您的手机费兑换申请已经处理成功，请及时查看您的手机余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_finish_flow_tilte: 流量包兑换成功
+    exchange_finish_amazon_content: 亲爱的<br/><br/>您好！您的“亚马逊礼品卡”兑换申请已经处理成功，<br/>请在<a href="http://www.91jili.com/user/exchange/2/1"  target="_blank">兑换历史</a>中查看您的“亚马逊礼品卡”卡号。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support"  target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
+    exchange_finish_alipay_content: 亲爱的<br/><br/>您好！您的支付宝充值申请已经处理成功，请及时查看您的支付宝余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
+    exchange_finish_mobile_content: 亲爱的<br/><br/>您好！您的手机费兑换申请已经处理成功，请及时查看您的手机余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
+    exchange_finish_flow_content: 亲爱的<br/><br/>您好！您的流量包兑换申请已经处理成功，请及时查看您的流量。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
     exchange_finish_wenwen_title: 91问问积分兑换成功
-    ecchange_finish_wenwen_content: 亲爱的<br/><br/>您好！您从91问问网站上申请的兑换已经处理成功，米粒已经发放至您的积粒网账户，请及时查看您的米粒余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    ecchange_finish_wenwen_content: 亲爱的<br/><br/>您好！您从91问问网站上申请的兑换已经处理成功，米粒已经发放至您的积粒网账户，请及时查看您的米粒余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
     exchange_fail_amazon_tilte: “亚马逊礼品卡”兑换失败
     exchange_fail_alipay_tilte: 支付宝充值兑换失败
     exchange_fail_mobile_tilte: 手机费兑换失败
-    exchange_fail_amazon_content: 亲爱的<br/><br/>您好！非常抱歉，您的“亚马逊礼品卡”申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
-    exchange_fail_alipay_content: 亲爱的<br/><br/>您好！非常抱歉，您的支付宝充值申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
-    exchange_fail_mobile_content: 亲爱的<br/><br/>您好！非常抱歉，您的手机费申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="https://www.91wenwen.net/support/" target="_blank">https://www.91wenwen.net/support/</a><br/><br/>积粒网运营中心
+    exchange_fail_flow_tilte: 流量包兑换失败
+    exchange_fail_amazon_content: 亲爱的<br/><br/>您好！非常抱歉，您的“亚马逊礼品卡”申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
+    exchange_fail_alipay_content: 亲爱的<br/><br/>您好！非常抱歉，您的支付宝充值申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
+    exchange_fail_mobile_content: 亲爱的<br/><br/>您好！非常抱歉，您的手机费申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
+    exchange_fail_flow_content: 亲爱的<br/><br/>您好！非常抱歉，您的流量包申请兑换失败，积分已自动返还到您的积粒网帐户。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://www.91jili.com/support" target="_blank">http://www.91jili.com/support</a><br/><br/>积粒网运营中心
     card_number_is_null: 请输入您的身份证号码
     card_number_is_error: 身份证号码错误
     card_number_is_exist: 您已经提交过身份证号码，如需修改请联系客服
@@ -323,3 +329,46 @@ parameters:
     weibo_appid: 693159936
     weibo_appkey: ac24832ff6273b123b4f3dc7747cbf1e
     weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
+
+   #流量包
+    flow_url: http://59.83.33.13/   #接口url
+    flow_prv_key: A757C0C02B0CF959   #加密私钥
+    flow_custom_sn: 8C981708DF8AE2F0   #SN号码
+    flow_client_ip: #ip地址
+        1: 59.83.33.8
+        2: 59.83.33.60
+    flow_file_path_flow_api_log: /data/91jili/logs/api/flow_api.log
+    flow_mail_subject: "积粒网-flow流量包接口数据处理失败"
+    flow_alertTo_contacts: vctech-system-emergency@voyagegroup.com
+    flow_exchange_error: "对不起，不能兑换，请联系客服！"
+    flow_mobile_validate_api: "mobile_validateV1.php"
+    flow_createorder_api: "createorder_api.php"
+    flow_validations:
+        1: { errorno: "1001", message: "缺少参数(custom_order_sn,status)"}
+        2: { errorno: "1002", message: "非法IP" }
+        3: { errorno: "1003", message: "status不正确(success,error)" }
+        4: { errorno: "1004", message: "订单不存在" }
+        5: { errorno: "1005", message: "订单已结束" }
+#slack
+    slack_alert_url: "https://hooks.slack.com/services/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"
+    slack_alert_channel: "#vct-alert-91jili"
+    slack_alert_username: "91jili_system"
+    slack_alert_text_prefix: "channel: "
+
+    duomai_com:
+        site_id:     152244
+        site_hash:   f2cc3391af820e539fac5d3fbcb89c2c
+
+        # 订单状态  -1 无效 0 未确认 1 确认 2 结算
+        # request status to request status
+        status:
+            UNCERTAIN:   0 # init
+            CONFIRMED:   1 # pending 
+            BALANCED:    2 # completed success
+            INVALID:    -1 # completed failed
+
+        response:
+            SUCCESS: 1 #1 表示此次推送成功 并且订单已成功入库。
+            SUCCESS_DUPLICATED: 0 #0 表示推送成功 但订单已存在。
+            FAILED: -1 #-1 表示推送失败
+
