--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -372,3 +372,6 @@ parameters:
             SUCCESS_DUPLICATED: 0 #0 表示推送成功 但订单已存在。
             FAILED: -1 #-1 表示推送失败
 
+twig:
+    globals: 
+        cps_default_rebate:  %cps_default_rebate%
