--- a/etc/logrotate.conf
+++ b/etc/logrotate.conf
@@ -1,5 +1,5 @@
 
-# logrotate -s /var/log/logstatus logrotate.conf
+# logrotate -s /var/log/logstatus /var/www/html/91jili/etc/logrotate.conf
 #  rotate previous month prod.log on the 1st day of each month 
 # 0 0 1 * *  
 
