adjusted the  logrotate conf on testing by manual

--- a/etc/logrotate.conf
+++ b/etc/logrotate.conf
@@ -1,15 +1,18 @@
-
-# logrotate -s /var/log/logstatus /var/www/html/91jili/etc/logrotate.conf
 #  rotate previous month prod.log on the 1st day of each month 
-# 0 0 1 * *  
 
+# sudo addgroup -a -G apache webuser
+# crontab -u webuser 
+# 0 0 1 * *  /usr/sbin/logrotate -s /data/91jili/logs/logstatus /var/www/html/91jili/etc/logrotate.conf > /dev/null
+# 5 years
 /data/91jili/logs/sf2/prod.log {
         size 1k
         copytruncate
-        create 644 apache apache  
+        create 660 webuser apache
         compress
-        compresscmd /bin/bzip2
+        compresscmd /usr/bin/bzip2
         compressext .bz2
         monthly
-        rotate 60 # 5 years
+        rotate 60 
+        missingok
 }
+
