updated cron&scripts notice recipients

--- a/scripts/perl/config/log_bk.yaml
+++ b/scripts/perl/config/log_bk.yaml
@@ -5,4 +5,4 @@ keywords:
     log:      maillog,messages,spooler
     httpd:      access_log,error_log,ssl_access_log
 mail_to:
-    to:      xujf@voyagegroup.com.cn
+    to:     vctech-system@voyagegroup.info 
