--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -311,7 +311,7 @@ parameters:
     webpower_email_password: 'nUshkwu#9'
     webpower_soap_uri: 'http://91jili.dmdelivery.com/x/soap-v4/wsdl.php'
     
-    cron_alertTo_contacts: [ "jinzhang@voyagegroup.com.cn", "zhangmm@voyagegroup.com.cn", "tao_jiang@voyagegroup.com", "xiaoyi_chai@voyagegroup.com", "xujf@voyagegroup.com.cn" ] 
+    cron_alertTo_contacts: [ "miaomiao_zhang@voyagegroup.com",  "tao_jiang@voyagegroup.com", "xiaoyi_chai@voyagegroup.com" ]
     alert_subject: '积粒网-定时任务提醒邮件'
 
     # the uri relative to web/
@@ -374,7 +374,7 @@ parameters:
             SUCCESS_DUPLICATED: 0 #0 表示推送成功 但订单已存在。
             FAILED: -1            #-1 表示推送失败
 
-   jili_app.logs_dir: /data/91jili/logs
+    jili_app.logs_dir: /data/91jili/logs
 twig:
     globals: 
         cps_default_rebate:  %cps_default_rebate%
