admin vote: image process

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,7 +57,9 @@ twig:
         bangwoya_com: %bangwoya_com%
 
         cps_rebate_type: %cps_rebate_type%
-        tb_self_promot_pic_path: %taobao_self_promotion_picture_uri_path% 
+        tb_self_promot_pic_path: %taobao_self_promotion_picture_uri_path%
+
+        upload_tmp_image_dir: %upload_tmp_image_dir%
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
@@ -143,7 +145,6 @@ monolog:
             level: info
             formatter: monolog.formatter.session_request
             channels: [user_source]
-
 
 gregwar_captcha:
     width: 100
