--- a/src/Jili/BackendBundle/Resources/config/services.yml
+++ b/src/Jili/BackendBundle/Resources/config/services.yml
@@ -32,3 +32,5 @@ services:
         arguments: [ %activity_gathering% ]
         calls:
             - [ setLogger, [ @logger ] ] 
+    helper.imageresizer:
+        class: Jili\BackendBundle\Helper\ImageResizer
