admin vote : add log

--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -377,6 +377,7 @@ parameters:
             FAILED: -1            #-1 表示推送失败
 
     jili_app.logs_dir: /data/91jili/logs
+    admin_vote_log_path: /data/91jili/logs/admin/admin_vote.log
 twig:
     globals:
         cps_default_rebate:  %cps_default_rebate%
