--- a/migration/script/config.php.dist
+++ b/migration/script/config.php.dist
@@ -8,6 +8,7 @@ define('ENV', 'dev');
 
 //define('BASE_PATH', dirname(__FILE__));
 
+define('IMPORT_PATH', BASE_PATH.'/import);
 define('IMPORT_JILI_PATH', BASE_PATH.'/jl_csv');
 define('IMPORT_WW_PATH', BASE_PATH.'/ww_csv');
 define('EXPORT_PATH', BASE_PATH . '/export');
