--- a/migration/script/table_size_summary/makefile.txt
+++ b/migration/script/table_size_summary/makefile.txt
@@ -1,15 +1,15 @@
 
 gen-sql-ww:
-	source config.bashrc
+	
 	/usr/bin/php -f a.php wenwen > a.sql
-	scp a.sql t-jiang@rpa-staff01:~/
-	ssh   t-jiang@rpa-staff01 'mysql -u ${WW_DB_USER} -p${WW_DB_PWD}-h${WW_DB_HOST}  ${WW_DB_NAME}  < ~/a.sql'  |sed '/^count/d;/^Table/d' |awk -F "\t"  'BEGIN{OFS="\t"} /^[a-z]/ {a=$$1;b=$$2}; /^[0-9]/ {print a,b,$$1}'  | tee ww_mig_tables_qauto.txt
+	scp a.sql t-jiang@54.254.98.246:/mnt/tmp/merge/bin/
+	ssh   t-jiang@54.254.98.246 'cd /mnt/tmp/merge/bin/;source config.bashrc;mysql -u ${WW_DB_USER} -p${WW_DB_PWD}-h${WW_DB_HOST}  ${WW_DB_NAME}  < a.sql'  |sed '/^count/d;/^Table/d' |awk -F "\t"  'BEGIN{OFS="\t"} /^[a-z]/ {a=$$1;b=$$2}; /^[0-9]/ {print a,b,$$1}'  | tee ww_mig_tables_qauto.txt
 
 gen-sql-jl:
-	source config.bashrc
+	
 	/usr/bin/php -f a.php jili > a.sql
-	scp -P9012 a.sql jiangtao@jili-web:~/
-	ssh   jiangtao@jili-web -p9012  'mysql -u ${WW_DB_USER} -p${WW_DB_PWD}-h${WW_DB_HOST}  ${WW_DB_NAME} < ~/a.sql' | tee ./a.txt
+	scp -P9012 a.sql jiangtao@www.91jili.com:/date/91jili/merge/bin/
+	ssh   jiangtao@www.91jili.com -p9012  'cd /date/91jili/merge/bin/;source config.bashrc;mysql -u ${WW_DB_USER} -p${WW_DB_PWD}-h${WW_DB_HOST}  ${WW_DB_NAME} < a.sql' | tee ./a.txt
 	cat a.txt |sed '/^count/d;/^Table/d' |awk -F "\t"  'BEGIN{OFS="\t"} /^[a-z]/ {a=$$1;b=$$2}; /^[0-9]/ {print a,b,$$1}' 
  
 
