update the format of dumped csv

--- a/migration/script/db_to_csv/makefile.txt
+++ b/migration/script/db_to_csv/makefile.txt
@@ -1,7 +1,7 @@
 
 dump-jili:
-	/usr/bin/php -f jl_csv.php > jl_csv.sh
-	scp -P9012 jl_csv.sh config.bashrc.dist jiangtao@www.91jili.com:/data/91jili/merge/bin/
+	/usr/bin/php -f jl_csv.php > /data/91jili/merge/bin/jl_csv.sh
+	scp -P9012 /data/91jili/merge/bin/jl_csv.sh config.bashrc.dist jiangtao@www.91jili.com:/data/91jili/merge/bin/
 #	ssh jiangtao@www.91jili 'time bash jl_csv.sh';
 
 #	scp jili_csv.sh jiangtao@${JILI_DB}:~/
@@ -15,20 +15,19 @@ dump-jili:
 #
 dump-ww:
 	/usr/bin/php -f ww_csv.php > ww_csv.sh
-	scp ww_csv.sh config.bashrc.dist  t-jiang@54.254.98.246:/mnt/tmp/merge/bin/
+	cp config.bashrc.dist  /data/91jili/merge/bin/
 # on rpa-staff01
 #	ssh  t-jiang@rpa-staff01 'bash /mnt/tmp/merge/bin/ww_csv.sh'
-#
+
 # on 235 
-#  time scp t-jiang@54.254.98.246:/mnt/tmp/merge/ww_csv.tar.bz /tmp/
+#  time scp t-jiang@54.254.98.246:/mnt/tmp/merge/ww_csv.tar.bz /tmp/  1>~/merge_db_scp.log  $2>1
 #  real    4m43.764s
 #  real    3m19.486s
 #
-#  time scp -P9012 /tmp/ww_csv.tar.bz jiangtao@testgroup.91jili.com:/data/91jili/merge/
+#  time scp -P9012 /tmp/ww_csv.tar.bz jiangtao@testgroup.91jili.com:/data/91jili/merge/ 1>>~/merge_db_scp.log  $2>1
+
 #  real    0m57.179s
 #  real    0m44.756s
-#
-#  
 
 # on testgroup.com
 # ssh jiangtao@testgroup.91jili.com -p9012 'cd /data/91jili/merge;time tar xjvf ww_csv.tar.bz'
