--- a/migration/script/db_to_csv/makefile.txt
+++ b/migration/script/db_to_csv/makefile.txt
@@ -1,45 +1,47 @@
+jili_log=/data/91jili/merge/log/jili.log
+jili_log_bk=/data/91jili/merge/log/jili_`date +%Y%m%d-%H`.log
 
-dump-jili:
-	/usr/bin/php -f jl_csv.php > /data/91jili/merge/bin/jl_csv.sh
-	scp -P9012 ./db_to_csv.php  /data/91jili/merge/bin/jl_csv.sh config.bashrc.dist jiangtao@www.91jili.com:/data/91jili/merge/bin/
-#	ssh jiangtao@www.91jili 'time bash jl_csv.sh';
+ww_log=/data/91jili/merge/log/ww.log
+ww_log_bk=/data/91jili/merge/log/ww_`date +%Y%m%d-%H`.log
 
-#	scp jili_csv.sh jiangtao@${JILI_DB}:~/
-#	jiangtao@${JILI_DB} -e 'mysql -ujili_admin -h vct002 jili_db <  ~/select.sql'
-#	tar jcf - jili_csv.tar.bz | ssh -C  jiangtao@testgroup.91jili.com  'cd ~/tmp/jili_csv;tar jxf -'
-#	 time scp -P9012 jl_csv.tar.bz	 jiangtao@testgroup.91jili.com:/data/91jili/merge
-#	 jiangtao@testgroup.91jili.com:/data/91jili/merge
-#
-# on testgroup.com
-# ssh jiangtao@testgroup.91jili.com -p9012 'cd /data/91jili/merge;time tar xjvf jl_csv.tar.bz'
-#
-dump-ww:
-	/usr/bin/php -f ww_csv.php > ww_csv.sh
-	cp config.bashrc.dist  /data/91jili/merge/bin/
-# on rpa-staff01
-#	scp -P9012  jiangtao@testgroup.91jili.com:/data/91jili/merge/bin/db_to_csv.php  /mnt/tmp/merge/bin/
-#	scp -P9012  jiangtao@testgroup.91jili.com:/data/91jili/merge/bin/ww_csv.sh  /mnt/tmp/merge/bin/
-#	scp -P9012  jiangtao@testgroup.91jili.com:/data/91jili/merge/bin/config.bashrc.dist  /mnt/tmp/merge/bin/
-#	ssh  t-jiang@rpa-staff01 "bash /mnt/tmp/merge/bin/ww_csv.sh"
-# 
-# on 235 
-#  time scp t-jiang@54.254.98.246:/mnt/tmp/merge/ww_csv.tar.bz /tmp/  1>~/merge_db_scp.log  2>&1
-#  real    4m43.764s
-#  real    3m19.486s
-#
-#  time scp -P9012 /tmp/ww_csv.tar.bz jiangtao@testgroup.91jili.com:/data/91jili/merge/ 1>>~/merge_db_scp.log  2>&1
+time_fmt=real\t%E\nuser\t%U\nsys\t%S\n
+merge_dir=/data/91jili/merge
 
-#  real    0m57.179s
-#  real    0m44.756s
+init:
+	mkdir -p ${merge_dir} 
 
-# on testgroup.com
-# ssh jiangtao@testgroup.91jili.com -p9012 'cd /data/91jili/merge;
-# /usr/bin/time -ao logs/decompress_ww.log -f "real\t%E\nuser\t%U\nsys\t%S\n" tar xjvf ww_csv.tar.bz 1> logs/decompress_ww.log 2>&1
-# '
-#  real    1m3.397s
-#
-#  sum the real time
-# grep log/   | cut -b 5-100 | awk -F '[m|s]' 'BEGIN{m=0;s=0;} { m=m+$1;s=s+$2; } END{ print  m "m" s "s"}'
+# 235
+fetch-jili:	dump-jili
+	echo 'fetch jili tarball' >> ${jili_log} 
+	/usr/bin/time -ao ${jili_log}  -f "${time_fmt}" scp -q -P9012 jiangtao@www.91jili.com:/data/91jili/merge/jl_csv.tar.bz ${merge_dir}  1>>${fetch_log}  2>&1
+	echo 'decompress jili ball' >> ${jili_log} 
+	/usr/bin/time -ao ${jili_log}  -f "${time_fmt}" tar -xjf  ${merge_dir}/jl_csv.tar.bz -C ${merge_dir} 1>>${jili_log}  2>&1
+	echo 'completed' >> ${jili_log} 
+	cp ${jili_log}  ${$jili_log_bk}
 
 
+# 235
+dump-jili: init
+	echo 'deploy dump db script' > ${jili_log} 
+	/usr/bin/time -ao ${jili_log}  -f "real\t%E\nuser\t%U\nsys\t%S\n" php -f jl_csv.php > /data/91jili/merge/bin/jl_csv.sh
+	/usr/bin/time -ao ${jili_log}  -f "real\t%E\nuser\t%U\nsys\t%S\n" scp -P9012 ./db_to_csv.php  /data/91jili/merge/bin/jl_csv.sh config.bashrc.dist jiangtao@www.91jili.com:/data/91jili/merge/bin/
+	echo 'run dump db script' >> ${jili_log} 
+	ssh -p 9012 jiangtao@www.91jili.com 'cd /data/91jili/merge; bash bin/jl_csv.sh 2>&1 ' >> ${jili_log}
+
+
+dump-ww: init
+	echo 'deploy dump db script' > ${ww_log} 
+	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}"  php -f ww_csv.php > ${merge_dir}/ww_csv.sh
+	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}" scp -q db_to_csv.php ${merge_dir}/ww_csv.sh  config.bashrc.dist  t-jiang@54.254.98.246:/mnt/tmp/merge/bin/
+	# todo: add waiting user update config.
+	echo 'run dump db script' >> ${ww_log} 
+	ssh t-jiang@54.254.98.246 'cd /mnt/tmp/merge/; bash bin/ww_csv.sh 2>&1 ' >> ${ww_log}
+
+fetch-ww: dump-ww
+	echo 'fetch wenwen tarball' >> ${ww_log} 
+	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}" scp -q t-jiang@54.254.98.246:/mnt/tmp/merge/ww_csv.tar.bz  ${merge_dir}  1>>${ww_log}  2>&1
+	echo 'decompress jili tarball' >> ${ww_log} 
+	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}" tar -xjf  ${merge_dir}/ww_csv.tar.bz -C ${merge_dir} 1>>${fetch_jili_log}  2>&1
+	echo 'completed' >> ${jili_log} 
+	cp ${ww_log}  ${$ww_log_bk}
 
