--- a/migration/script/db_to_csv/makefile.txt
+++ b/migration/script/db_to_csv/makefile.txt
@@ -22,19 +22,23 @@ fetch-jili:	dump-jili
 
 # 235
 dump-jili: init
-	echo 'deploy dump db script' > ${jili_log} 
+	echo 'generate the dump-db script' > ${jili_log} 
 	/usr/bin/time -ao ${jili_log}  -f "real\t%E\nuser\t%U\nsys\t%S\n" php -f jl_csv.php > /data/91jili/merge/bin/jl_csv.sh
+	echo 'deploy dump-db script' >> ${jili_log} 
 	/usr/bin/time -ao ${jili_log}  -f "real\t%E\nuser\t%U\nsys\t%S\n" scp -P9012 ./db_to_csv.php  /data/91jili/merge/bin/jl_csv.sh config.bashrc.dist jiangtao@www.91jili.com:/data/91jili/merge/bin/
-	echo 'run dump db script' >> ${jili_log} 
+	while true;do read -p "Have you update the db config on remote server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
+	echo 'run dump-db script' >> ${jili_log} 
 	ssh -p 9012 jiangtao@www.91jili.com 'cd /data/91jili/merge; bash bin/jl_csv.sh 2>&1 ' >> ${jili_log}
 
 
+
 dump-ww: init
-	echo 'deploy dump db script' > ${ww_log} 
+	echo 'generate the dump-db script' > ${jili_log} 
 	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}"  php -f ww_csv.php > ${merge_dir}/ww_csv.sh
+	echo 'deploy dump-db script' > ${ww_log} 
 	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}" scp -q db_to_csv.php ${merge_dir}/ww_csv.sh  config.bashrc.dist  t-jiang@54.254.98.246:/mnt/tmp/merge/bin/
-	# todo: add waiting user update config.
-	echo 'run dump db script' >> ${ww_log} 
+	while true;do read -p "Have you update the db config on remote server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
+	echo 'run dump-db script' >> ${ww_log} 
 	ssh t-jiang@54.254.98.246 'cd /mnt/tmp/merge/; bash bin/ww_csv.sh 2>&1 ' >> ${ww_log}
 
 fetch-ww: dump-ww
@@ -44,4 +48,10 @@ fetch-ww: dump-ww
 	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}" tar -xjf  ${merge_dir}/ww_csv.tar.bz -C ${merge_dir} 1>>${fetch_jili_log}  2>&1
 	echo 'completed' >> ${jili_log} 
 	cp ${ww_log}  ${$ww_log_bk}
+
+.SILENT:
+
+static:
+	sed "/^$$/d;/^user/d;/^sys/d" ${ww_log} ${jili_log}
+	grep -h real ${ww_log} ${jili_log}   | cut -b 5-100 | awk -F '[m|:|s]' 'BEGIN{m=0;s=0;} { m=m+$$1;s=s+$$2; } END{ print  (m + int(s/60)) "m" (s % 60) "s"}' 
 
